quacker-frontend/k8s/production/quacker-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quacker-frontend
  labels:
    app: quacker-frontend
    service: quacker-frontend
spec:
  type: ClusterIP
  ports:
    - name: 'http-80'
      port: 80
      targetPort: 80
  selector:
    app: quacker-frontend
